# qd

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs  utils.rs
src/f128/: consts.rs  convert.rs  data.rs  mod.rs  ops.rs
src/f256/: data.rs  mod.rs
tests/: mod.rs  utils.rs
tests/f128/: data.rs
